k8s/Day16/EKS-NetworkPolicy-GatewayAPI/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: giropops-senhas-route
  namespace: giropops
spec:
  parentRefs:
    - name: http-gateway
      namespace: giropops
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: giropops-senhas
          port: 5000
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: "/app2"
    #   backendRefs:
    #     - name: app2-service
    #       port: 80
